--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
     <title>Página de Descargas</title>
 
 </head>
@@ -12,7 +13,7 @@
 <body>
 
     <header>
-        <h1>Descarga de archivos</h2>
+        <h3>Archivos de logotipo</h3>
         <h3>C.E.N.S. César Hermógenes Guerrero</h2>
     </header>
 
