--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header>
         <h3>Archivos de logotipo</h3>
-        <h3>C.E.N.S. César Hermógenes Guerrero</h2>
+        <h3>C.E.N.S. N° 249 César Hermógenes Guerrero</h2>
     </header>
 
 
