--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
+     <link rel="icon" href="./img2/favicon.ico" type="image/x-icon">
     <title>Página de Descargas</title>
 
 </head>
@@ -24,66 +24,66 @@
             <h2>Archivos PNG</h2>
 
             <div class="download-container">
-                <img class="download-img" src="./img/01.png" alt="">
-                <a class="download-button" href="./img/01.png" download>Descargar PNG 01</a>
+                <img class="download-img" src="./img2/01.png" alt="">
+                <a class="download-button" href="./img2/01.png" download>Descargar PNG 01</a>
             </div>
 
             <div class="download-container">
-                <img class="download-img" src="./img/02.png" alt="">
-                <a class="download-button" href="./img/02.png" download>Descargar PNG 02</a>
+                <img class="download-img" src="./img2/02.png" alt="">
+                <a class="download-button" href="./img2/02.png" download>Descargar PNG 02</a>
             </div>
 
             <div class="download-container">
-                <img class="download-img" src="./img/03.png" alt="">
-                <a class="download-button" href="./img/03.png" download>Descargar PNG 03</a>
+                <img class="download-img" src="./img2/03.png" alt="">
+                <a class="download-button" href="./img2/03.png" download>Descargar PNG 03</a>
             </div>
 
             <div class="download-container">
-                <img class="download-img" src="./img/04.png" alt="">
-                <a class="download-button" href="./img/04.png" download>Descargar PNG 04</a>
+                <img class="download-img" src="./img2/04.png" alt="">
+                <a class="download-button" href="./img2/04.png" download>Descargar PNG 04</a>
             </div>
 
             <div class="download-container">
-                <img class="download-img" src="./img/05.png" alt="">
-                <a class="download-button" href="./img/05.png" download>Descargar PNG 05</a>
+                <img class="download-img" src="./img2/05.png" alt="">
+                <a class="download-button" href="./img2/05.png" download>Descargar PNG 05</a>
             </div>
 
             <div class="download-container">
-                <img class="download-img" src="./img/06.png" alt="">
-                <a class="download-button" href="./img/06.png" download>Descargar PNG 06</a>
+                <img class="download-img" src="./img2/06.png" alt="">
+                <a class="download-button" href="./img2/06.png" download>Descargar PNG 06</a>
             </div>
         </article>
 
         <article>
             <h2>Archivos SVG</h2>
             <div class="download-container">
-                <img class="download-img" src="./img/01.svg" alt="">
-                <a class="download-button" href="./img/01.svg" download>Descargar SVG 01</a>
+                <img class="download-img" src="./img2/01.svg" alt="">
+                <a class="download-button" href="./img2/01.svg" download>Descargar SVG 01</a>
             </div>
 
             <div class="download-container">
-                <img class="download-img" src="./img/02.svg" alt="">
-                <a class="download-button" href="./img/02.svg" download>Descargar SVG 02</a>
+                <img class="download-img" src="./img2/02.svg" alt="">
+                <a class="download-button" href="./img2/02.svg" download>Descargar SVG 02</a>
             </div>
 
             <div class="download-container">
-                <img class="download-img" src="./img/03.svg" alt="">
-                <a class="download-button" href="./img/03.svg" download>Descargar SVG 03</a>
+                <img class="download-img" src="./img2/03.svg" alt="">
+                <a class="download-button" href="./img2/03.svg" download>Descargar SVG 03</a>
             </div>
 
             <div class="download-container">
-                <img class="download-img" src="./img/04.svg" alt="">
-                <a class="download-button" href="./img/04.svg" download>Descargar SVG 04</a>
+                <img class="download-img" src="./img2/04.svg" alt="">
+                <a class="download-button" href="./img2/04.svg" download>Descargar SVG 04</a>
             </div>
 
             <div class="download-container">
-                <img class="download-img" src="./img/05.svg" alt="">
-                <a class="download-button" href="./img/05.svg" download>Descargar SVG 05</a>
+                <img class="download-img" src="./img2/05.svg" alt="">
+                <a class="download-button" href="./img2/05.svg" download>Descargar SVG 05</a>
             </div>
 
             <div class="download-container">
-                <img class="download-img" src="./img/06.svg" alt="">
-                <a class="download-button" href="./img/06.svg" download>Descargar SVG 06</a>
+                <img class="download-img" src="./img2/06.svg" alt="">
+                <a class="download-button" href="./img2/06.svg" download>Descargar SVG 06</a>
             </div>
         </article>
 
